Implement E2E tests for OTel based console sample